Получение метаданных видео

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -157,7 +157,8 @@ message.vavmerge.files.canceled=Files canceled. Send me a video and audio to mer
 message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
 message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - compress video</i>\n\
 \ud83d\udca1<i><b>STREAM</b> - make streaming video</i>\n\
-\ud83d\udca1<i><b>MUTE</b> - remove audio from video<i>
+\ud83d\udca1<i><b>MUTE</b> - remove audio from video</i>\n\
+\ud83d\udca1<i><b>PROBE</b> - get video metadata such as format, resolution, length, size</i>
 vedit.command.description=change video resolution
 vaimake.command.description=make video from audio and image
 vavmerge.command.description=replace or add audio to video
@@ -165,3 +166,7 @@ message.video.cut.welcome=Send me a video to cut
 message.video.cut.start.point=Send me start time to cut in hh:mm:ss. For example: 01:10:05 to start cutting at 1 hour 10 minutes 5 seconds
 message.video.cut.end.point=Send me end time to cut in hh:mm:ss. For example: 02:15:30 to end cutting at 2 hour 15 minutes 30 seconds
 message.video.cut.invalid.end.point=End time must be after start time
+message.video.probe.result=Format: <b>{0}</b>\n\
+Resolution: <b>{1}</b>\n\
+Length: <b>{2}</b>\n\
+Size: <b>{3}</b>
