--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -160,7 +160,8 @@ message.vavmerge.files.canceled=Файлы отменены. Отправьте 
 message.vavmerge.click=Отлично! Теперь нажмите <b>Объединить</b> на клавиатуре
 message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - сжать видео</i>\n\
 \ud83d\udca1<i><b>STREAM</b> - создать потоковое видео</i>\n\
-\ud83d\udca1<i><b>MUTE</b> - удалить аудио из видео<i>
+\ud83d\udca1<i><b>MUTE</b> - удалить аудио из видео</i>\n\
+\ud83d\udca1<i><b>PROBE</b> - получить метаданные видео такие как формат, разрешение, длина, размер</i>
 vedit.command.description=изменить разрешение видео
 vaimake.command.description=создать видео из картинки и аудио
 vavmerge.command.description=заменить или добавить аудио в видео
@@ -168,3 +169,7 @@ message.video.cut.welcome=Отправьте мне видео для обрез
 message.video.cut.start.point=Отправьте время начало обрезки в формате чч:мм:сс. Например: 01:10:05 для начала обрезки, начиная с 1 часа 10 минут 5 секунд
 message.video.cut.end.point=Отправьте время окончания обрезки в формате чч:мм:сс. Например: 02:15:30 для окончания обрезки на 2 часа 15 минут 30 секунд
 message.video.cut.invalid.end.point=Время окончания обрезки должна быть позже начала
+message.video.probe.result=Формат: <b>{0}</b>\n\
+Разрешение: <b>{1}</b>\n\
+Длина: <b>{2}</b>\n\
+Размер: <b>{3}</b>
