--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -162,7 +162,8 @@ message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga
 message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bosing.
 message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - videoni siqish</i>\n\
 \ud83d\udca1<i><b>STREAM</b> - oqim videosini yaratish</i>\n\
-\ud83d\udca1<i><b>MUTE</b> - ovozni videodan olib tashlash<i>
+\ud83d\udca1<i><b>MUTE</b> - ovozni videodan olib tashlash</i>\n\
+\ud83d\udca1<i><b>PROBE</b> - format, o'lcham, uzunlik, o'lcham kabi video meta-ma'lumotlarini oling</i>
 vedit.command.description=video piksellar sonini tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
 vavmerge.command.description=almashtirish yoki videoni audio qo'shish
@@ -170,3 +171,7 @@ message.video.cut.welcome=Tartibga solish uchun menga videoni yuboring
 message.video.cut.start.point=Trim boshlanish vaqtini hh: mm: ss formatida yuboring. Masalan: 01:10:05 1 soat 10 minut 5 soniyadan boshlab qirqishni boshlash
 message.video.cut.end.point=Tugatish vaqtini hh: mm: ss formatida yuboring. Masalan: 02:15:30 da 2 soat 15 daqiqa 30 soniya davomida qirqishni tugatish
 message.video.cut.invalid.end.point=Kesishning tugash vaqti boshlanishidan kech bo'lishi kerak
+message.video.probe.result=Formatlash: <b>{0}</b>\n\
+Qaror: <b>{1}</b>\n\
+Uzunlik: <b>{2}</b>\n\
+Hajmi: <b>{3}</b>
