--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,30 +17,14 @@ message.unsupported.format=I can’t work with files in this format yet. The sup
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
 message.unsupported.file=I can’t work with files in this format yet. Your file mime type is <b>{0}</b>. The supported file formats can be found \
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
-message.welcome=Welcome to the converter bot. \n\n\
-The instruction manual and all available formats can be found in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.\n\
-Stay tuned! Developers are working on adding new features.\n\n\
-If you find a bug or have any suggestions for improving the bot or questions, write to us \
-in <a href="https://t.me/smart_file_utils_support">Customer service</a>. \
-If any format which you want not supported for now, you can write to us too in <a href="https://t.me/smart_file_utils_support">Customer service</a> \
-and developers will add it.\n\n\
-The bot has no restrictions. \n\
-Telegram has next restrictions: an input and output file mustn''t greater then <b>2000 MB</b>. \
-The bot inform you about restrictions violations. \n\n\
-My commands:\n\
+message.welcome=<b>Updates and news channel</b> - @smart_file_utils\n\
+<b>Support group</b> - @smart_file_utils_support\n\n\
+<b>My commands:</b>\n\
 {0}
 message.convert.warnings=<b>Warnings:</b>\n{0}
-message.help=I can convert files, stickers, links and a plain text.\n\
-The instruction manual and all available formats can be found in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.\n\
-Stay tuned! Developers are working on adding new features.\n\n\
-If you find a bug or have any suggestions for improving the bot or questions, write to us \
-in <a href="https://t.me/smart_file_utils_support">Customer service</a>. \
-If any format which you want not supported for now, you can write to us too in <a href="https://t.me/smart_file_utils_support">Customer service</a> \
-and developers will add it.\n\n\
-The bot has no restrictions. \n\
-Telegram has next restrictions: an input and output file mustn''t greater then <b>2000 MB</b>. \
-The bot inform you about restrictions violations. \n\n\
-My commands:\n\
+message.help=<b>Updates and news channel</b> - @smart_file_utils\n\
+<b>Support group</b> - @smart_file_utils_support\n\n\
+<b>My commands:</b>\n\
 {0}
 message.formats=All formats list can be found in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.\n\
 If any format which you want not supported for now, you can write to us too in <a href="https://t.me/smart_file_utils_support">Customer service</a> \
@@ -48,10 +32,10 @@ and developers will add it.
 message.conversion.report=Thanks for feedback.In the near future, your appeal will be reviewed by the developers and the problem will be fixed.
 report.command.description=Report a bug
 message.choose.type=Choose type for converting on the keyboard
-message.convert.file=Send me a file, link, text, video, audio which you want to convert.
-message.convert.document.file=Send me a file, link or text which you want to convert.
-message.convert.video.file=Send me a video which you want to convert.
-message.convert.audio.file=Send me an audio which you want to convert.
+message.convert.file=Send me a file, link, text, video, audio to get started
+message.convert.document.file=Send me a file, link or text to get started
+message.convert.video.file=Send me a video to get started
+message.convert.audio.file=Send me an audio to get started
 message.conversion.failed=Something went wrong. The query can't be processed now. The problem will be resolved soon, and the file will be sent. \
 <b>Thank you for your patience</b>. <b>Please, report the incident to</b> <a href="https://t.me/smart_file_utils_support"> \
 Customer service</a>.
@@ -170,3 +154,10 @@ message.video.probe.result=Format: <b>{0}</b>\n\
 Resolution: <b>{1}</b>\n\
 Length: <b>{2}</b>\n\
 Size: <b>{3}</b>
+message.non.command.features=Send me a video to get started and choose:\n\
+<b>Video format</b> to convert video to another format. For example: MP4, MKV etc.\n\
+<b>Audio format</b> to extract audio from video. For example: MP3, OPUS etc.\n\
+<b>COMPRESS</b> to compress video\n\
+<b>STREAM</b> to make streaming video\n\
+<b>MUTE</b> to mute video\n\
+<b>PROBE</b> to get video metadata
