--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -16,34 +16,14 @@ message.unsupported.format=Hozircha men ushbu formatdagi fayllar bilan ishlashga
 <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>maqolasida topishingiz mumkin.
 message.unsupported.file=Ushbu formatdagi fayllar bilan qanday ishlashni bilmayman. Maym fayl turi <b>{0}</b>. Qo''llab-quvvatlanadigan formatlar ro''yxati siz \
 maqolada <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>.
-message.welcome=Bot konverteriga xush kelibsiz.\n\n\
-Siz bot bilan ishlash bo''yicha ko''rsatmalarni va qo''llab-quvvatlanadigan formatlarning to''liq ro''yxatini topishingiz mumkin \
-Qo''shimcha ma''lumot olish uchun <a href="https://tgraph.io/Formats-05-14">SmartFileUtils Bot</a>. \n\
-Yangiliklarni kuzatib boring, xabardor bo''lib boring; Biz bilan qoling! Ishlab chiquvchilar doimiy ravishda botni takomillashtirish ustida ishlamoqdalar. \
-Tez orada konvertatsiya qilish uchun yangi formatlarni ko''rasiz.\n\n\
-Agar xato topsangiz yoki bot ishini yaxshilash bo''yicha takliflaringiz bo''lsa yoki savollaringiz bo''lsa, bizga yozing \
-<a href="https://t.me/smart_file_utils_support">Mijozlarni qo''llab-quvvatlash</a>. \
-Agar ba''zi bir format etishmayotgan bo''lsa, unda siz <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a> \
-ga ham yozishingiz mumkin va tez orada u qo''llab-quvvatlanadigan formatlar ro''yxatida paydo bo''ladi.\n\n\
-Bot hech qanday cheklovlar qo''ymaydi.\n\
-Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b>2000MB</b> dan oshmasligi kerak. \
-Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman.\n\n\
-Mening buyruqlarim:\n\
+message.welcome=<b>Yangilanishlar va yangiliklar uchun kanal</b> - @smart_file_utils\n\
+<b>Yordam jamoasi</b> - @smart_file_utils_support\n\n\
+<b>Mening buyruqlarim:</b>\n\
 {0}
 message.convert.warnings=<b>Ogohlantirishlar:</b>\n{0}
-message.help=Fayllarni, stikerlarni, havolalarni va yangi kiritilgan matnni boshqa formatlarga o''zgartira olaman.\n\
-Siz bot bilan ishlash bo''yicha ko''rsatmalarni va qo''llab-quvvatlanadigan formatlarning to''liq ro''yxatini topishingiz mumkin \
-Qo''shimcha ma''lumot olish uchun <a href="https://tgraph.io/Formats-05-14">SmartFileUtils Bot</a>.\n\
-Yangiliklarni kuzatib boring, xabardor bo''lib boring; Biz bilan qoling! Ishlab chiquvchilar doimiy ravishda botni takomillashtirish ustida ishlamoqdalar. \
-Tez orada yangi konvertatsiya qiluvchi formatlarni va yangi arxiv formatlarini ko''rasiz.\n\n\
-Agar xato topsangiz yoki bot ishini yaxshilash bo''yicha takliflaringiz bo''lsa yoki savollaringiz bo''lsa, bizga yozing \
-<a href="https://t.me/smart_file_utils_support">Mijozlarni qo''llab-quvvatlash</a>. \
-Agar ba''zi bir format etishmayotgan bo''lsa, unda siz <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a> \
-ga ham yozishingiz mumkin va tez orada u qo''llab-quvvatlanadigan formatlar ro''yxatida paydo bo''ladi.\n\n\
-Bot hech qanday cheklovlar qo''ymaydi.\n\
-Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b>2000MB</b> dan oshmasligi kerak. \
-Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman.\n\n\
-Mening buyruqlarim:\n\
+message.help=<b>Yangilanishlar va yangiliklar uchun kanal</b> - @smart_file_utils\n\
+<b>Yordam jamoasi</b> - @smart_file_utils_support\n\n\
+<b>Mening buyruqlarim:</b>\n\
 {0}
 message.formats=To'liq ro'yxatni <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>. maqolasida topishingiz mumkin. \n\
 Agar biron bir format etishmayotgan bo'lsa, <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a> \
@@ -51,10 +31,10 @@ ga yozishingiz mumkin va tez orada u qo'llab-quvvatlanadigan formatlarning ro'yx
 message.conversion.report=Fikr-mulohazangiz uchun tashakkur. Yaqin kelajakda sizning murojaatingiz ishlab chiquvchilar tomonidan ko'rib chiqiladi va muammo bartaraf etiladi.
 report.command.description=Xato haqida xabar bering
 message.choose.type=Konvertatsiya qilish uchun klaviaturadan turini tanlang
-message.convert.file=Menga o'zgartirmoqchi bo'lgan fayl, havola, matn, video yoki audio xabarlarni yuboring.
-message.convert.document.file=Menga o'zgartirmoqchi bo'lgan fayl, havola yoki matnni yuboring.
-message.convert.video.file=Menga o'zgartirmoqchi bo'lgan videoni yuboring.
-message.convert.audio.file=Menga o'zgartirmoqchi bo'lgan audio xabarni yuboring.
+message.convert.file=Ishni boshlash uchun menga fayl, havola, matn, video yoki audio xabar yuboring
+message.convert.document.file=Ishni boshlash uchun menga fayl, havola yoki matn yuboring
+message.convert.video.file=Boshlash uchun menga audio xabar yuboring
+message.convert.audio.file=Boshlash uchun menga videoni yuboring
 message.conversion.failed=Nimadir noto'g'ri bajarildi. So'rovni hozirda ko'rib bo'lmaydi. \
 Muammo tez orada hal qilinadi va fayl yuboriladi. <b>Sabr qilganingiz uchun tashakkur</b>. \
 <b>Iltimos, voqea haqida xabar bering</b> <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a>.
@@ -175,3 +155,10 @@ message.video.probe.result=Formatlash: <b>{0}</b>\n\
 Qaror: <b>{1}</b>\n\
 Uzunlik: <b>{2}</b>\n\
 Hajmi: <b>{3}</b>
+message.non.command.features=Boshlash uchun menga video yuboring va tanlang:\n\
+<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: MP4, MKV va boshqalar.\n\
+Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: MP3, OPUS va boshqalar.\n\
+Videoni siqish uchun <b>COMPRESS</b>\n\
+Oqimli videoni yaratish uchun <b>STREAM</b>\n\
+<b>MUTE</b> videodan audio olib tashlash uchun\n\
+Video metama'lumotlarni olish uchun <b>PROBE</b>
