--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,12 +19,12 @@ message.unsupported.file=I can’t work with files in this format yet. Your file
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
 message.welcome=<b>Updates and news channel</b> - @smart_file_utils\n\
 <b>Support group</b> - @smart_file_utils_support\n\n\
-<b>My commands:</b>\n\
+My commands:\n\
 {0}
 message.convert.warnings=<b>Warnings:</b>\n{0}
 message.help=<b>Updates and news channel</b> - @smart_file_utils\n\
 <b>Support group</b> - @smart_file_utils_support\n\n\
-<b>My commands:</b>\n\
+My commands:\n\
 {0}
 message.formats=All formats list can be found in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.\n\
 If any format which you want not supported for now, you can write to us too in <a href="https://t.me/smart_file_utils_support">Customer service</a> \
@@ -139,10 +139,12 @@ message.vavmerge.awaiting.audio=Okay you sent video, now send me an <b>audio</b>
 vavmerge.command.name=Merge
 message.vavmerge.files.canceled=Files canceled. Send me a video and audio to merge.
 message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
-message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - compress video</i>\n\
-\ud83d\udca1<i><b>STREAM</b> - make streaming video</i>\n\
-\ud83d\udca1<i><b>MUTE</b> - remove audio from video</i>\n\
-\ud83d\udca1<i><b>PROBE</b> - get video metadata such as format, resolution, length, size</i>
+message.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to another format. For example: MP4, MKV etc.\n\
+\ud83d\udca1<b>Audio format</b> to extract audio from video. For example: MP3, OPUS etc.\n\
+\ud83d\udca1<b>COMPRESS</b> to compress video\n\
+\ud83d\udca1<b>STREAM</b> to make streaming video\n\
+\ud83d\udca1<b>MUTE</b> to mute video\n\
+\ud83d\udca1<b>PROBE</b> to get video metadata
 vedit.command.description=change video resolution
 vaimake.command.description=make video from audio and image
 vavmerge.command.description=replace or add audio to video
@@ -154,10 +156,4 @@ message.video.probe.result=Format: <b>{0}</b>\n\
 Resolution: <b>{1}</b>\n\
 Length: <b>{2}</b>\n\
 Size: <b>{3}</b>
-message.non.command.features=Send me a video to get started and choose:\n\
-<b>Video format</b> to convert video to another format. For example: MP4, MKV etc.\n\
-<b>Audio format</b> to extract audio from video. For example: MP3, OPUS etc.\n\
-<b>COMPRESS</b> to compress video\n\
-<b>STREAM</b> to make streaming video\n\
-<b>MUTE</b> to mute video\n\
-<b>PROBE</b> to get video metadata
+message.non.command.features.header=Send me a video to get started and choose:
