--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -18,12 +18,12 @@ message.unsupported.file=Ushbu formatdagi fayllar bilan qanday ishlashni bilmaym
 maqolada <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>.
 message.welcome=<b>Yangilanishlar va yangiliklar uchun kanal</b> - @smart_file_utils\n\
 <b>Yordam jamoasi</b> - @smart_file_utils_support\n\n\
-<b>Mening buyruqlarim:</b>\n\
+Mening buyruqlarim:\n\
 {0}
 message.convert.warnings=<b>Ogohlantirishlar:</b>\n{0}
 message.help=<b>Yangilanishlar va yangiliklar uchun kanal</b> - @smart_file_utils\n\
 <b>Yordam jamoasi</b> - @smart_file_utils_support\n\n\
-<b>Mening buyruqlarim:</b>\n\
+Mening buyruqlarim:\n\
 {0}
 message.formats=To'liq ro'yxatni <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>. maqolasida topishingiz mumkin. \n\
 Agar biron bir format etishmayotgan bo'lsa, <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a> \
@@ -140,10 +140,12 @@ message.vavmerge.awaiting.audio=Yaxshi, siz videoni yubordingiz, endi menga <b>a
 vavmerge.command.name=Birlashtirish
 message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yuboring.
 message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bosing.
-message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - videoni siqish</i>\n\
-\ud83d\udca1<i><b>STREAM</b> - oqim videosini yaratish</i>\n\
-\ud83d\udca1<i><b>MUTE</b> - ovozni videodan olib tashlash</i>\n\
-\ud83d\udca1<i><b>PROBE</b> - format, o'lcham, uzunlik, o'lcham kabi video meta-ma'lumotlarini oling</i>
+message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: MP4, MKV va boshqalar.\n\
+\ud83d\udca1Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: MP3, OPUS va boshqalar.\n\
+\ud83d\udca1Videoni siqish uchun <b>COMPRESS</b>\n\
+\ud83d\udca1Oqimli videoni yaratish uchun <b>STREAM</b>\n\
+\ud83d\udca1<b>MUTE</b> videodan audio olib tashlash uchun\n\
+\ud83d\udca1Video metama'lumotlarni olish uchun <b>PROBE</b>
 vedit.command.description=video piksellar sonini tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
 vavmerge.command.description=almashtirish yoki videoni audio qo'shish
@@ -155,10 +157,4 @@ message.video.probe.result=Formatlash: <b>{0}</b>\n\
 Qaror: <b>{1}</b>\n\
 Uzunlik: <b>{2}</b>\n\
 Hajmi: <b>{3}</b>
-message.non.command.features=Boshlash uchun menga video yuboring va tanlang:\n\
-<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: MP4, MKV va boshqalar.\n\
-Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: MP3, OPUS va boshqalar.\n\
-Videoni siqish uchun <b>COMPRESS</b>\n\
-Oqimli videoni yaratish uchun <b>STREAM</b>\n\
-<b>MUTE</b> videodan audio olib tashlash uchun\n\
-Video metama'lumotlarni olish uchun <b>PROBE</b>
+message.non.command.features.header=Boshlash uchun menga video yuboring va tanlang:
