Добавил кнопку для отмены файла для обрезки

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -86,6 +86,7 @@ merge.command.name=MERGE
 merge.command.description=Merge pdf files
 message.merge.pdfs.no.files=You haven't sent files to merge. Send me pdf files at first.
 cancel.files.command.name=Cancel files
+cancel.file.command.name=Cancel file
 message.merge.pdfs.canceled=Canceled <b>{0}</b> files
 message.merge.pdfs.non.pdf.file=Send me pdf files
 merging.step=Merging
