--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -85,6 +85,7 @@ merge.command.name=MERGE
 merge.command.description=Объединить pdf файлы
 message.merge.pdfs.no.files=Вы еще не отправили ни одного файла для объеденинения. Сначала отправьте мне pdf файлы.
 cancel.files.command.name=Отменить файлы
+cancel.file.command.name=Отменить файл
 message.merge.pdfs.canceled=Отменено <b>{0}</b> файлов
 message.merge.pdfs.non.pdf.file=Отправьте мне pdf файлы
 message.merge.pdfs.min.2.files=Вам нужно отправить 2 или более файлов для объединения.
