--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -86,6 +86,7 @@ merge.command.name=MERGE
 merge.command.description=PDF fayllarini birlashtirish
 message.merge.pdfs.no.files=Siz hali birlashish uchun bironta faylni taqdim etmadingiz. Iltimos, avval menga pdf fayllarini yuboring.
 cancel.files.command.name=Fayllarni bekor qiling
+cancel.file.command.name=Faylni bekor qilish
 message.merge.pdfs.canceled=Bekor qilindi <b>{0}</b> fayllar
 message.merge.pdfs.non.pdf.file=Menga pdf fayllarini yuboring
 message.merge.pdfs.min.2.files=Birlashtirish uchun 2 yoki undan ortiq fayllarni yuborishingiz kerak.
