Cut time out of range validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,14 @@ message.file.queued=The file will be converted to <b>{0}</b>\n\
 Global queue position: <b>{1}</b>
 message.files.queued=The files will be converted to <b>{0}</b>\n\
 Global queue position: <b>{1}</b>
+message.vmake.queued=Video will be created from audio and image in <b>{0}</b> format\n\
+Global queue position: <b>{1}</b>
+message.mute.queued=Audio will be removed from video\n\
+Global queue position: <b>{0}</b>
+message.probe.queued=Metadata will be get from video\n\
+Global queue position: <b>{0}</b>
+message.video.cut.queued=Video will be cut\n\
+Global queue position: <b>{0}</b>
 message.merge.files.queued=The files will be merged to one\n\
 Global queue position: <b>{0}</b>
 message.compress.queued=The file will be compressed\n\
@@ -50,6 +58,10 @@ downloading.step=Downloading
 downloading.files.step=Downloaded {0} files of {1}
 converting.step=Converting
 compressing.step=Compressing
+video.making.step=Making video
+muting.step=Removing audio
+cutting.step=Cutting
+probing.step=Metadata getting
 uploading.step=Uploading
 icon.check=\u2705
 message.text.appended=Text appended. Keep sending. When done select a format on the keyboard.
@@ -103,7 +115,7 @@ message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
-message.video.edit.welcome=Send me a video to change resolution. Only the last sent video will be edited.
+message.video.edit.welcome=Send me a video to change resolution. Only the last sent video will be edited. Click <b>PROBE</b> on the keyboard to get current video result.
 message.video.edit.settings.resolution=Change resolution to: <b>{0}</b>
 message.video.edit.settings.choose.resolution=Choose video resolution on the keyboard and click <b>Change resolution</b>
 edit.video.command.description=Change resolution
@@ -149,12 +161,13 @@ message.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to
 vedit.command.description=change video resolution
 vaimake.command.description=make video from audio and image
 vavmerge.command.description=replace or add audio to video
-message.video.cut.welcome=Send me a video to cut
-message.video.cut.start.point=Send me start time to cut in hh:mm:ss. For example: 01:10:05 to start cutting at 1 hour 10 minutes 5 seconds
-message.video.cut.end.point=Send me end time to cut in hh:mm:ss. For example: 02:15:30 to end cutting at 2 hour 15 minutes 30 seconds
+message.video.cut.welcome=Send me a video to cut. Click <b>PROBE</b> on the keyboard to get current video length.
+message.video.cut.start.point=Send me start time to cut in <b>hh:mm:ss</b>. For example: <b>01:10:05</b> to start cutting at <b>1 hour 10 minutes 5 seconds</b>
+message.video.cut.end.point=Send me end time to cut in <b>hh:mm:ss</b>. For example: <b>02:15:30</b> to end cutting at <b>2 hour 15 minutes 30 seconds</b>
 message.video.cut.invalid.end.point=End time must be after start time
 message.video.probe.result=Format: <b>{0}</b>\n\
 Resolution: <b>{1}</b>\n\
 Length: <b>{2}</b>\n\
 Size: <b>{3}</b>
 message.non.command.features.header=Send me a video to get started and choose:
+message.cut.out.of.range=Video length is <b>{0}</b>, but you have specified time to cut <b>from {1} to {2}</b>. Cut impossible with this options.
