--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -103,7 +103,8 @@ message.audio.compress.opus.estimated.size=Siqilgandan keyingi o''lcham: <b>{0}<
 message.audio.compress.original.size=Siqishdan oldin o''lcham: <b>{0}</b>
 message.compressed.size=Asl hajmi: <b>{0}</b>\n\
 Siqilgandan keyingi o''lcham: <b>{1}</b>
-message.video.edit.welcome=Ruxsatni o'zgartirish uchun menga video yuboring. Faqat oxirgi yuklangan video o'zgartiriladi.
+message.video.edit.welcome=Ruxsatni o'zgartirish uchun menga video yuboring. Faqat oxirgi yuklangan video o'zgartiriladi. \
+Joriy video o'lchamlarini olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
 message.video.edit.settings.resolution=Ruxsatni bunga o''zgartirish: <b>{0}</b>
 message.video.edit.settings.choose.resolution=Klaviaturadagi piksellar sonini tanlang va <b>Ruxsatni o'zgartirish</b> tugmasini bosing
 edit.video.command.description=Ruxsatni o'zgartirish
@@ -150,12 +151,25 @@ message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa for
 vedit.command.description=video piksellar sonini tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
 vavmerge.command.description=almashtirish yoki videoni audio qo'shish
-message.video.cut.welcome=Tartibga solish uchun menga videoni yuboring
-message.video.cut.start.point=Trim boshlanish vaqtini hh: mm: ss formatida yuboring. Masalan: 01:10:05 1 soat 10 minut 5 soniyadan boshlab qirqishni boshlash
-message.video.cut.end.point=Tugatish vaqtini hh: mm: ss formatida yuboring. Masalan: 02:15:30 da 2 soat 15 daqiqa 30 soniya davomida qirqishni tugatish
+message.video.cut.welcome=Tartibga solish uchun menga videoni yuboring. Joriy videoning uzunligini bilish uchun klaviaturadan <b>PROBE</b> -ni tanlang.
+message.video.cut.start.point=Trim boshlanish vaqtini <b>hh:mm:ss</b> formatida yuboring. Masalan: <b>01:10:05</b> <b>1 soat 10 minut 5 soniyadan</b> boshlab qirqishni boshlash
+message.video.cut.end.point=Tugatish vaqtini <b>hh:mm:ss</b> formatida yuboring. Masalan: <b>02:15:30</b> da <b>2 soat 15 daqiqa 30 soniya</b> davomida qirqishni tugatish
 message.video.cut.invalid.end.point=Kesishning tugash vaqti boshlanishidan kech bo'lishi kerak
 message.video.probe.result=Formatlash: <b>{0}</b>\n\
 Qaror: <b>{1}</b>\n\
 Uzunlik: <b>{2}</b>\n\
 Hajmi: <b>{3}</b>
 message.non.command.features.header=Boshlash uchun menga video yuboring va tanlang:
+message.vmake.queued=Video audio va rasmdan <b>{0}</b> formatida yaratiladi\n\
+Global navbatdagi joy: <b>{1}</b>
+message.mute.queued=Videodan audio olib tashlanadi\n\
+Global navbatdagi joy: <b>{0}</b>
+message.probe.queued=Metadata video orqali olinadi\n\
+Global navbatdagi joy: <b>{0}</b>
+message.video.cut.queued=Video qisqartiriladi\n\
+Global navbatdagi joy: <b>{0}</b>
+video.making.step=Video yaratish
+muting.step=Ovoz o'chirilmoqda
+cutting.step=Qirqish
+probing.step=Meta-ma'lumot olinmoqda
+message.cut.out.of.range=Videoning uzunligi <b>{0}</b>, ammo siz kesish vaqtini <b>{1} dan {2}</b> gacha belgiladingiz. Ushbu parametr bilan kesish mumkin emas.
