Фикс получение whd

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -115,7 +115,7 @@ message.video.will.be.edited=Разрешение видео будет изме
 video.editing.step=Изменение разрешения
 video.editing.resolution.changed=Оригинальное разрешение: <b>{0}</b>\n\
 Результирующее разрешение: <b>{1}</b>
-message.video.resolution.the.same=Видео уже имеет такое же разрешение <b>{0}</b>
+message.video.resolution.the.same=\u2757\ufe0fВидео уже имеет такое же разрешение <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Вы должны знать, что увеличение разрешения видео не означает улучшения качества.</i>
 message.incompressible.audio=Я не могу сжать это аудио
 message.compress.audio.output.format=Формат сжатия: <b>{0}</b>
@@ -153,7 +153,7 @@ vavmerge.command.description=заменить или добавить аудио
 message.video.cut.welcome=Отправьте мне видео для обрезки. Выберите на клавитуре <b>PROBE</b> для получения текущей длины видео.
 message.video.cut.start.point=Отправьте время начало обрезки в формате <b>чч:мм:сс</b>. Например: <b>01:10:05</b> для начала обрезки, начиная с <b>1 часа 10 минут 5 секунд</b>
 message.video.cut.end.point=Отправьте время окончания обрезки в формате <b>чч:мм:сс</b>. Например: <b>02:15:30</b> для окончания обрезки на <b>2 часа 15 минут 30 секунд</b>
-message.video.cut.invalid.end.point=Время окончания обрезки должна быть позже начала
+message.video.cut.invalid.end.point=\u2757\ufe0fВремя окончания обрезки должна быть позже начала
 message.video.probe.result=Формат: <b>{0}</b>\n\
 Разрешение: <b>{1}</b>\n\
 Длина: <b>{2}</b>\n\
@@ -171,4 +171,4 @@ video.making.step=Создание видео
 muting.step=Удаление аудио
 cutting.step=Обрезка
 probing.step=Получение метаданных
-message.cut.out.of.range=Длина видео <b>{0}</b>, но вы указали время обрезки <b>с {1} до {2}</b>. С этим вариантом обрезать невозможно.
+message.cut.out.of.range=\u2757\ufe0fДлина видео <b>{0}</b>, но вы указали время обрезки <b>с {1} до {2}</b>. С этим вариантом обрезать невозможно.
