--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -116,7 +116,7 @@ Global navbatdagi joy: <b>{0}</b>
 video.editing.step=Ruxsatni o'zgartirish
 video.editing.resolution.changed=Asl o''lcham: <b>{0}</b>\n\
 Natijada echim: <b>{1}</b>
-message.video.resolution.the.same=Video allaqachon bir xil rezolyutsiyaga ega <b>{0}</b>
+message.video.resolution.the.same=\u2757\ufe0fVideo allaqachon bir xil rezolyutsiyaga ega <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sifatni yaxshilash degani emasligini bilishingiz kerak.</i>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Siqish formati: <b>{0}</b>
@@ -154,7 +154,7 @@ vavmerge.command.description=almashtirish yoki videoni audio qo'shish
 message.video.cut.welcome=Tartibga solish uchun menga videoni yuboring. Joriy videoning uzunligini bilish uchun klaviaturadan <b>PROBE</b> -ni tanlang.
 message.video.cut.start.point=Trim boshlanish vaqtini <b>hh:mm:ss</b> formatida yuboring. Masalan: <b>01:10:05</b> <b>1 soat 10 minut 5 soniyadan</b> boshlab qirqishni boshlash
 message.video.cut.end.point=Tugatish vaqtini <b>hh:mm:ss</b> formatida yuboring. Masalan: <b>02:15:30</b> da <b>2 soat 15 daqiqa 30 soniya</b> davomida qirqishni tugatish
-message.video.cut.invalid.end.point=Kesishning tugash vaqti boshlanishidan kech bo'lishi kerak
+message.video.cut.invalid.end.point=\u2757\ufe0fKesishning tugash vaqti boshlanishidan kech bo'lishi kerak
 message.video.probe.result=Formatlash: <b>{0}</b>\n\
 Qaror: <b>{1}</b>\n\
 Uzunlik: <b>{2}</b>\n\
@@ -172,4 +172,5 @@ video.making.step=Video yaratish
 muting.step=Ovoz o'chirilmoqda
 cutting.step=Qirqish
 probing.step=Meta-ma'lumot olinmoqda
-message.cut.out.of.range=Videoning uzunligi <b>{0}</b>, ammo siz kesish vaqtini <b>{1} dan {2}</b> gacha belgiladingiz. Ushbu parametr bilan kesish mumkin emas.
+message.cut.out.of.range=\u2757\ufe0fVideoning uzunligi <b>{0}</b>, ammo siz kesish vaqtini <b>{1} dan {2}</b> gacha belgiladingiz. \
+Ushbu parametr bilan kesish mumkin emas.
