--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -127,7 +127,7 @@ Global queue position: <b>{0}</b>
 video.editing.step=Changing resolution
 video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
-message.video.resolution.the.same=Video already has the same resolution <b>{0}</b>
+message.video.resolution.the.same=\u2757\ufe0fVideo already has the same resolution <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
 message.compress.audio.output.frequency=Frequency: <b>{0}Hz</b>
@@ -164,10 +164,10 @@ vavmerge.command.description=replace or add audio to video
 message.video.cut.welcome=Send me a video to cut. Click <b>PROBE</b> on the keyboard to get current video length.
 message.video.cut.start.point=Send me start time to cut in <b>hh:mm:ss</b>. For example: <b>01:10:05</b> to start cutting at <b>1 hour 10 minutes 5 seconds</b>
 message.video.cut.end.point=Send me end time to cut in <b>hh:mm:ss</b>. For example: <b>02:15:30</b> to end cutting at <b>2 hour 15 minutes 30 seconds</b>
-message.video.cut.invalid.end.point=End time must be after start time
+message.video.cut.invalid.end.point=\u2757\ufe0fEnd time must be after start time
 message.video.probe.result=Format: <b>{0}</b>\n\
 Resolution: <b>{1}</b>\n\
 Length: <b>{2}</b>\n\
 Size: <b>{3}</b>
 message.non.command.features.header=Send me a video to get started and choose:
-message.cut.out.of.range=Video length is <b>{0}</b>, but you have specified time to cut <b>from {1} to {2}</b>. Cut impossible with this options.
+message.cut.out.of.range=\u2757\ufe0fVideo length is <b>{0}</b>, but you have specified time to cut <b>from {1} to {2}</b>. Cut impossible with this options.
