Make video square

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -171,3 +171,5 @@ Length: <b>{2}</b>\n\
 Size: <b>{3}</b>
 message.non.command.features.header=Send me a video to get started and choose:
 message.cut.out.of.range=\u2757\ufe0fVideo length is <b>{0}</b>, but you have specified time to cut <b>from {1} to {2}</b>. Cut impossible with this options.
+message.video.already.square=Video already square with side <b>{0}</b>
+message.square.caption=Square side <b>{0}</b>
