--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -147,6 +147,8 @@ message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa for
 \ud83d\udca1Videoni siqish uchun <b>COMPRESS</b>\n\
 \ud83d\udca1Oqimli videoni yaratish uchun <b>STREAM</b>\n\
 \ud83d\udca1<b>MUTE</b> videodan audio olib tashlash uchun\n\
+\ud83d\udca1<b>SQUARE</b> kvadrat video yaratish\n\
+\ud83d\udca1<b>VIDEO_NOTE</b> dumaloq video yaratish\n\
 \ud83d\udca1Video metama'lumotlarni olish uchun <b>PROBE</b>
 vedit.command.description=video piksellar sonini tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
@@ -157,8 +159,9 @@ message.video.cut.end.point=Tugatish vaqtini <b>hh:mm:ss</b> formatida yuboring.
 message.video.cut.invalid.end.point=\u2757\ufe0fKesishning tugash vaqti boshlanishidan kech bo'lishi kerak
 message.video.probe.result=Formatlash: <b>{0}</b>\n\
 Qaror: <b>{1}</b>\n\
-Uzunlik: <b>{2}</b>\n\
-Hajmi: <b>{3}</b>
+Kenglik<b>x</b>Balandlik: <b>{2}</b>\n\
+Uzunlik: <b>{3}</b>\n\
+Hajmi: <b>{4}</b>
 message.non.command.features.header=Boshlash uchun menga video yuboring va tanlang:
 message.vmake.queued=Video audio va rasmdan <b>{0}</b> formatida yaratiladi\n\
 Global navbatdagi joy: <b>{1}</b>
@@ -174,3 +177,12 @@ cutting.step=Qirqish
 probing.step=Meta-ma'lumot olinmoqda
 message.cut.out.of.range=\u2757\ufe0fVideoning uzunligi <b>{0}</b>, ammo siz kesish vaqtini <b>{1} dan {2}</b> gacha belgiladingiz. \
 Ushbu parametr bilan kesish mumkin emas.
+message.video.already.square=\u2757\ufe0fVideo allaqachon kengligi va balandligi <b>{0}</b> bilan kvadratga solingan. Dumaloq video yaratish uchun \
+ushbu videoni menga yo''naltiring va klaviaturadan <b>VIDEO_NOTE</b> -ni tanlang.
+message.square.caption=Videoning kengligi va balandligi <b>{0}</b>. Dumaloq video yaratish uchun videoni menga yuboring va klaviaturangizda <b>VIDEO_NOTE</b> -ni tanlang.
+message.invalid.video.note.candidate.format=\u2757\ufe0fDumaloq videoni faqat quyidagi formatlardan yaratish mumkin: <b>{0}</b>. \
+Siz videongizni ushbu formatlarning biriga o''zgartirishingiz kerak.
+message.invalid.video.note.candidate.size=\u2757\ufe0fDairesel video faqat <b>8MB</b> gacha bo''lgan videolardan yaratilishi mumkin. Video o''lchamingiz: <b>{0}</b>. \
+/vcut buyrug''i yordamida videoni siqish yoki qisqartirish kerak.
+message.invalid.video.note.candidate.dimension=\u2757\ufe0fVideo annotatsiyasini faqat <b>kvadrat video</b> dan yaratish mumkin. Videoning kengligi va balandligi: <b>{0}</b>. \
+<b>To''rtburchakli videoni</b> yaratish uchun videoni menga qayta yuboring va klaviaturada <b>SQUARE</b> ni tanlang.
