Сортировка кнопок улучшение сообщений

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -152,14 +152,15 @@ message.vavmerge.awaiting.audio=Okay you sent video, now send me an <b>audio</b>
 vavmerge.command.name=Merge
 message.vavmerge.files.canceled=Files canceled. Send me a video and audio to merge.
 message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
-message.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to another format. For example: MP4, MKV etc.\n\
-\ud83d\udca1<b>Audio format</b> to extract audio from video. For example: MP3, OPUS etc.\n\
+message.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to another format. For example: <b>MP4, MKV</b> etc.\n\
+\ud83d\udca1<b>Audio format</b> to extract audio from video. For example: <b>MP3, OPUS</b> etc.\n\
+\ud83d\udca1<b>Subtitle format</b> to extract subtitles from video. For example: <b>ASS, SRT, WEBVTT</b> etc.\n\
 \ud83d\udca1<b>COMPRESS</b> to compress video\n\
 \ud83d\udca1<b>STREAM</b> to make streaming video\n\
 \ud83d\udca1<b>MUTE</b> to mute video\n\
-\ud83d\udca1<b>SQUARE</b> to make square video\n\
+\ud83d\udca1<b>SQUARE</b> to make square video in MP4 format. For example, such a video can be used to create a <b>video note</b>\n\
 \ud83d\udca1<b>VIDEO_NOTE</b> to create video note from video. To create a video note your video must be <b>square</b>, \
-no more than <b>60 seconds</b> and no more than <b>8MB</b> in size. To cut video use /vcut command\n\
+no more than <b>60 seconds</b>, no more than <b>8MB</b> in size and must be in <b>MP4</b> format. To cut video use /vcut command\n\
 \ud83d\udca1<b>PROBE</b> to get video metadata
 vedit.command.description=change video resolution
 vaimake.command.description=make video from audio and image
@@ -177,11 +178,14 @@ message.non.command.features.header=Send me a video to get started and choose:
 message.cut.out.of.range=\u2757\ufe0fVideo length is <b>{0}</b>, but you have specified time to cut <b>from {1} to {2}</b>. Cut impossible with this options.
 message.video.already.square=\u2757\ufe0fVideo already square with width and height <b>{0}</b>. To create video note resend me the video and choose <b>VIDEO_NOTE</b> on the keyboard.
 message.square.caption=Video''s width and height <b>{0}</b>. To create video note resend me the video and choose <b>VIDEO_NOTE</b> on the keyboard.
-message.invalid.video.note.candidate.format=\u2757\ufe0fVideo note can be created only from <b>{0}</b> format. \
-Your video format is <b>{1}</b>. You need to convert this video to <b>{0}</b> at first.
+message.invalid.video.note.candidate.format=\u2757\ufe0fVideo note can be created only from video in <b>MP4</b> format. \
+Your video format is <b>{0}</b>. You need to convert this video to <b>MP4</b> at first.
 message.invalid.video.note.candidate.size=\u2757\ufe0fVideo note can only be created from a video up to <b>8MB</b> in size. You video''s size: <b>{0}</b>. \
 You need compress video or cut with /vcut command.
 message.invalid.video.note.candidate.dimension=\u2757\ufe0fVideo note can only be created from <b>square video</b>. Your video''s width and height: <b>{0}</b>. \
 To create <b>square video</b> resend me the video and choose <b>SQUARE</b> on the keyboard.
 message.invalid.video.note.length=\u2757\ufe0fVideo note can only be created from video no longer than <b>60 seconds</b>. Your video length: <b>{0}</b> seconds. \
 Use /vcut command to cut video.
+message.audio.streams.not.found=\u2757\ufe0fThere is no audio in this video to extract
+message.subtitle.streams.not.found=\u2757\ufe0fThere are no subtitles in this video to extract
+message.choose=Choose:
