--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -141,14 +141,15 @@ message.vavmerge.awaiting.audio=Хорошо, вы отправили видео
 vavmerge.command.name=Объединить
 message.vavmerge.files.canceled=Файлы отменены. Отправьте мне видео и аудио, для объединения.
 message.vavmerge.click=Отлично! Теперь нажмите <b>Объединить</b> на клавиатуре
-message.non.command.features=\ud83d\udca1<b>Видео формат</b> для конвертации видео в другой формат. Например: MP4, MKV и т. д.\n\
-\ud83d\udca1<b>Аудио формат</b> для извлечения аудио из видео. Например: MP3, OPUS и т. д.\n\
+message.non.command.features=\ud83d\udca1<b>Видео формат</b> для конвертации видео в другой формат. Например: <b>MP4, MKV</b> и т. д.\n\
+\ud83d\udca1<b>Аудио формат</b> для извлечения аудио из видео. Например: <b>MP3, OPUS</b> и т. д.\n\
+\ud83d\udca1<b>Формат субтитров</b> для извлечения субтитров из видео. Например: <b>ASS, SRT, WEBVTT</b> и т. д.\n\
 \ud83d\udca1<b>COMPRESS</b> для сжатия видео\n\
 \ud83d\udca1<b>STREAM</b> для создания потокового видео\n\
 \ud83d\udca1<b>MUTE</b> для удаления аудио из видео\n\
-\ud83d\udca1<b>SQUARE</b> для создания квадратного видео\n\
+\ud83d\udca1<b>SQUARE</b> для создания квадратного видео. Например, такое видео может быть использовано для создания <b>круглого видео</b>\n\
 \ud83d\udca1<b>VIDEO_NOTE</b> для создания круглого видео. Для создания круглого видео ваше видео должно быть <b>квадратным</b>, \
-продолжительностью не более <b>60 секунд</b> и размером не более <b>8МБ</b>. Для обрезки видео используйте команду /vcut\n\
+продолжительностью не более <b>60 секунд</b>, размером не более <b>8МБ</b> и в формате <b>MP4</b>. Для обрезки видео используйте команду /vcut\n\
 \ud83d\udca1<b>PROBE</b> для получения метаданных видео
 vedit.command.description=изменить разрешение видео
 vaimake.command.description=создать видео из картинки и аудио
@@ -178,11 +179,13 @@ probing.step=Получение метаданных
 message.cut.out.of.range=\u2757\ufe0fДлина видео <b>{0}</b>, но вы указали время обрезки <b>с {1} до {2}</b>. С этим вариантом обрезать невозможно.
 message.video.already.square=\u2757\ufe0fВидео уже квадртаное с шириной и высотой <b>{0}</b>. Для создания круглого видео перешлите мне это видео и выберите <b>VIDEO_NOTE</b> на клавиатуре.
 message.square.caption=Ширина и высота видео <b>{0}</b>. Для создания круглого видео перешлите мне видео и выберите <b>VIDEO_NOTE</b> на клавиатуре.
-message.invalid.video.note.candidate.format=\u2757\ufe0fКруглое видео можно создать только в формате <b>{0}</b>. \
-Формат вашего видео - <b>{1}</b>. Сначала вам нужно сконвертировать это видео в формат <b>{0}</b>.
+message.invalid.video.note.candidate.format=\u2757\ufe0fКруглое видео можно создать только из видео в формате <b>MP4</b>. \
+Формат вашего видео - <b>{0}</b>. Сначала вам нужно сконвертировать это видео в формат <b>MP4</b>.
 message.invalid.video.note.candidate.size=\u2757\ufe0fКруглое видео можно создать только из видео размером до <b>8МБ</b>. Размер вашего видео: <b>{0}</b>. \
 Вам нужно сжать или обрезать видео с помощью команды /vcut.
 message.invalid.video.note.candidate.dimension=\u2757\ufe0fВидеозаметку можно создать только из <b>квадратного видео</b>. Ширина и высота вашего видео: <b>{0}</b>. \
 Чтобы создать <b>квадратное видео</b>, повторно отправьте мне видео и выберите <b>SQUARE</b> на клавиатуре.
 message.invalid.video.note.length=\u2757\ufe0fКруглое видео может быть создано только из видео длиной не более <b>60 секунд</b>. \
 Длина вашего видео: <b>{0}</b> секунд. Для обрезки видео используйте команду /vcut.
+message.audio.streams.not.found=\u2757\ufe0fВ этом видео нет аудио для извлечения
+message.subtitle.streams.not.found=\u2757\ufe0fВ этом видео нет субтитров для извлечения
