--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -142,14 +142,15 @@ message.vavmerge.awaiting.audio=Yaxshi, siz videoni yubordingiz, endi menga <b>a
 vavmerge.command.name=Birlashtirish
 message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yuboring.
 message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bosing.
-message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: MP4, MKV va boshqalar.\n\
-\ud83d\udca1Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: MP3, OPUS va boshqalar.\n\
+message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: <b>MP4, MKV</b> va boshqalar.\n\
+\ud83d\udca1Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: <b>MP3, OPUS</b> va boshqalar.\n\
+\ud83d\udca1<b>Subtitr formati</b> videodan subtitrlarni chiqarish uchun. Masalan: <b>ASS, SRT, WEBVTT</b> va boshqalar.\n\
 \ud83d\udca1Videoni siqish uchun <b>COMPRESS</b>\n\
 \ud83d\udca1Oqimli videoni yaratish uchun <b>STREAM</b>\n\
 \ud83d\udca1<b>MUTE</b> videodan audio olib tashlash uchun\n\
-\ud83d\udca1<b>SQUARE</b> kvadrat video yaratish\n\
-\ud83d\udca1<b>VIDEO_NOTE</b> dumaloq video yaratish. Dumaloq videoni yaratish uchun videongiz <b>kvadrat</b>, \
-bo'lishi kerak <b>60 soniyadan</b> va hajmi <b>8MB</b> dan oshmasligi kerak. Videoni qisqartirish uchun /vcut buyrug'idan foydalaning\n\
+\ud83d\udca1<b>SQUARE</b> kvadrat video yaratish. Masalan, bunday videodan <b>dumaloq video</b> yaratish mumkin\n\
+\ud83d\udca1<b>VIDEO_NOTE</b> dumaloq video yaratish. Dumaloq videoni yaratish uchun videongiz <b> kvadrat </b>, \
+bo'lishi kerak <b>60 soniyadan</b>, <b>8MB</b> va <b>MP4</b>formatidan oshmasligi kerak. Videoni qisqartirish uchun /vcut buyrug'idan foydalaning\n\
 \ud83d\udca1Video metama'lumotlarni olish uchun <b>PROBE</b>
 vedit.command.description=video piksellar sonini tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
@@ -181,11 +182,13 @@ Ushbu parametr bilan kesish mumkin emas.
 message.video.already.square=\u2757\ufe0fVideo allaqachon kengligi va balandligi <b>{0}</b> bilan kvadratga solingan. Dumaloq video yaratish uchun \
 ushbu videoni menga yo''naltiring va klaviaturadan <b>VIDEO_NOTE</b> -ni tanlang.
 message.square.caption=Videoning kengligi va balandligi <b>{0}</b>. Dumaloq video yaratish uchun videoni menga yuboring va klaviaturangizda <b>VIDEO_NOTE</b> -ni tanlang.
-message.invalid.video.note.candidate.format=\u2757\ufe0fDumaloq videoni faqat <b>{0}</b> formatida yaratish mumkin. \
-Videongizning formati <b>{1}</b>. Avval ushbu videoni <b>{0}</b> formatiga o''tkazishingiz kerak.
+message.invalid.video.note.candidate.format=\u2757\ufe0fDumaloq videoni faqat <b>MP4</b> videolardan yaratish mumkin. \
+Videongizning formati <b>{0}</b>. Avval ushbu videoni <b>MP4</b> formatiga o''tkazishingiz kerak.
 message.invalid.video.note.candidate.size=\u2757\ufe0fDairesel video faqat <b>8MB</b> gacha bo''lgan videolardan yaratilishi mumkin. Video o''lchamingiz: <b>{0}</b>. \
 /vcut buyrug''i yordamida videoni siqish yoki qisqartirish kerak.
 message.invalid.video.note.candidate.dimension=\u2757\ufe0fVideo annotatsiyasini faqat <b>kvadrat video</b> dan yaratish mumkin. Videoning kengligi va balandligi: <b>{0}</b>. \
 <b>To''rtburchakli videoni</b> yaratish uchun videoni menga qayta yuboring va klaviaturada <b>SQUARE</b> ni tanlang.
 message.invalid.video.note.length=\u2757\ufe0fDumaloq videoni faqat <b>60 soniyadan</b> oshmaydigan videolardan yaratish mumkin. \
 Videoning uzunligi: <b>{0}</b> soniyadan. Videoni qisqartirish uchun /vcut buyrug''idan foydalaning.
+message.audio.streams.not.found=\u2757\ufe0fUshbu videoda chiqarib olish uchun audio yo'q
+message.subtitle.streams.not.found=\u2757\ufe0fUshbu videoda subtitrlar yo'q
