Новые улучшения сообщений

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -189,3 +189,4 @@ message.invalid.video.note.length=\u2757\ufe0fКруглое видео може
 Длина вашего видео: <b>{0}</b> секунд. Для обрезки видео используйте команду /vcut.
 message.audio.streams.not.found=\u2757\ufe0fВ этом видео нет аудио для извлечения
 message.subtitle.streams.not.found=\u2757\ufe0fВ этом видео нет субтитров для извлечения
+message.choose=Выберите:
