--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -192,3 +192,4 @@ message.invalid.video.note.length=\u2757\ufe0fDumaloq videoni faqat <b>60 soniya
 Videoning uzunligi: <b>{0}</b> soniyadan. Videoni qisqartirish uchun /vcut buyrug''idan foydalaning.
 message.audio.streams.not.found=\u2757\ufe0fUshbu videoda chiqarib olish uchun audio yo'q
 message.subtitle.streams.not.found=\u2757\ufe0fUshbu videoda subtitrlar yo'q
+message.choose=Tanlang:
