Добавил в информацию команду обрезки

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -189,3 +189,4 @@ Use /vcut command to cut video.
 message.audio.streams.not.found=\u2757\ufe0fThere is no audio in this video to extract
 message.subtitle.streams.not.found=\u2757\ufe0fThere are no subtitles in this video to extract
 message.choose=Choose:
+cut.video.command.description=cut video
