--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -190,3 +190,4 @@ message.invalid.video.note.length=\u2757\ufe0fКруглое видео може
 message.audio.streams.not.found=\u2757\ufe0fВ этом видео нет аудио для извлечения
 message.subtitle.streams.not.found=\u2757\ufe0fВ этом видео нет субтитров для извлечения
 message.choose=Выберите:
+cut.video.command.description=обрезать видео
