--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -193,3 +193,4 @@ Videoning uzunligi: <b>{0}</b> soniyadan. Videoni qisqartirish uchun /vcut buyru
 message.audio.streams.not.found=\u2757\ufe0fUshbu videoda chiqarib olish uchun audio yo'q
 message.subtitle.streams.not.found=\u2757\ufe0fUshbu videoda subtitrlar yo'q
 message.choose=Tanlang:
+cut.video.command.description=videoni qisqartirish
