--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -146,7 +146,7 @@ message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa for
 \ud83d\udca1Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: <b>MP3, OPUS</b> va boshqalar.\n\
 \ud83d\udca1<b>Subtitr formati</b> videodan subtitrlarni chiqarish uchun. Masalan: <b>ASS, SRT, WEBVTT</b> va boshqalar.\n\
 \ud83d\udca1Videoni siqish uchun <b>COMPRESS</b>\n\
-\ud83d\udca1Oqimli videoni yaratish uchun <b>STREAM</b>\n\
+\ud83d\udca1<b>STREAM</b> to'g'ridan-to'g'ri Telegram-da tomosha qilish uchun video yaratish\n\
 \ud83d\udca1<b>MUTE</b> videodan audio olib tashlash uchun\n\
 \ud83d\udca1<b>SQUARE</b> kvadrat video yaratish. Masalan, bunday videodan <b>dumaloq video</b> yaratish mumkin\n\
 \ud83d\udca1<b>VIDEO_NOTE</b> dumaloq video yaratish. Dumaloq videoni yaratish uchun videongiz <b> kvadrat </b>, \
