--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -156,8 +156,8 @@ message.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to
 \ud83d\udca1<b>Audio format</b> to extract audio from video. For example: <b>MP3, OPUS</b> etc.\n\
 \ud83d\udca1<b>Subtitle format</b> to extract subtitles from video. For example: <b>ASS, SRT, WEBVTT</b> etc.\n\
 \ud83d\udca1<b>COMPRESS</b> to compress video\n\
-\ud83d\udca1<b>STREAM</b> to make streaming video\n\
-\ud83d\udca1<b>MUTE</b> to mute video\n\
+\ud83d\udca1<b>STREAM</b> to make streaming video to watch it directly in Telegram\n\
+\ud83d\udca1<b>MUTE</b> to remove audio from video\n\
 \ud83d\udca1<b>SQUARE</b> to make square video in MP4 format. For example, such a video can be used to create a <b>video note</b>\n\
 \ud83d\udca1<b>VIDEO_NOTE</b> to create video note from video. To create a video note your video must be <b>square</b>, \
 no more than <b>60 seconds</b>, no more than <b>8MB</b> in size and must be in <b>MP4</b> format. To cut video use /vcut command\n\
